Blog Post Misalignment Bug Fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -480,6 +480,7 @@ textarea {
 .blog-post {
   display: flex;
   padding: 10px;
+  width: 100%;
 }
 
 .blog-image {
